--- a/app/assets/stylesheets/custmos.css.scss
+++ b/app/assets/stylesheets/custmos.css.scss
@@ -6,14 +6,14 @@ $navbar-default-bg: black;
 #logo {
     float: left;
     font-size: 1.7em;
-    color:blue;
+    color: white;
     text-transform: uppercase;
     letter-spacing: -1px;
     font-weight: bold;
 }
 
 #logo:hover {
-    color: chartreuse;
+    color: blue;
     text-decoration: none;
 }
 
