--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -7,19 +7,33 @@
 </ul>
 <% end %>
 
-<%= form_for @article do |f| %>
-    <p>
-        <%= f.label :title %><br/>
-        <%= f.text_field :title %>
-    </p>
-    <p>
-        <%= f.label :description %><br/>
-        <%= f.text_area :description%>
-    </p>
-    <p>
-        <%= f.submit %>
-    </p>
-
-<% end %>
-
-<%= link_to "Back to articles listing", articles_path %>
+<div class = 'row'>
+    <div class = 'col-sm-12'>
+        <%= form_for(@article, :html=>{class:"form-horizontal", role:"form"}) do |f| %>
+            <div class="form-group row">
+                <div class = "control-label col-sm-1">            
+                    <%= f.label:title %>
+                </div>
+                <div class="col-sm-9">
+                <%= f.text_field:title, class:"form-control", placeholder: "Title of article", autofocus:true %>
+                </div>
+            </div>
+            <div class="form-group row">
+                <div class = "control-label col-sm-1"> 
+                    <%= f.label :description %>
+                </div>
+                <div class = "col-sm-9">
+                    <%= f.text_area :description, rows:10, class:"form-control", placeholder: "Body of article", autofocus:true %>
+                </div>
+            </div> 
+            <div class="form-group row">
+                <div class = "col-sm-10 offset-sm-1">
+                    <%= f.submit class:"btn btn-primary btn-lg" %>
+                </div>
+            </div>
+        <% end %>
+        <center>
+            [<%= link_to "Cancel and request and retur to articles listing", articles_path %>]
+        </center>
+    </div>
+</div>
