style errors and messagess partials

--- a/app/assets/stylesheets/custmos.css.scss
+++ b/app/assets/stylesheets/custmos.css.scss
@@ -80,3 +80,9 @@ footer ul li{
     float: left;
     margin-left: 15px;
 }
+
+.panel-danger{
+    color:rgb(150, 10, 10);
+    background-color:rgb(255, 226, 226);
+    opacity: 0,2;
+}
