--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -1,11 +1,4 @@
-<% if @article.errors.any? %>
-<h2> The following errors prevented the article from getting created </h2>
-<ul>
-    <% @article.errors.full_messages.each do |msg| %>
-    <li><%= msg %></li
-    <% end %>
-</ul>
-<% end %>
+<%= render 'shared/errors', obj:@article %>
 
 <div class = 'row'>
     <div class = 'col-sm-12'>
@@ -33,7 +26,7 @@
             </div>
         <% end %>
         <center>
-            [<%= link_to "Cancel and request and retur to articles listing", articles_path %>]
+            [<%= link_to "Cancel and request and return to articles listing", articles_path %>]
         </center>
     </div>
 </div>
