add style to show templete

--- a/app/assets/stylesheets/custmos.css.scss
+++ b/app/assets/stylesheets/custmos.css.scss
@@ -55,6 +55,19 @@ $navbar-default-bg: black;
     opacity: 0,5;
 }
 
+.article-actions{
+    border-top: 1px solid white;
+    padding-top: 5px;
+}
+
+.description{
+    margin-top: 0px;
+}
+
+.show-articles{
+    background-color: rgb(241, 241, 241);
+}
+
 footer{
     margin-top: 45px;
     padding-top: 5px;
@@ -64,7 +77,7 @@ footer{
 }
 
 footer a:hover{
-    color: yellow;
+    color: black;
 }
 
 small{
