--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,13 +1,15 @@
-<h1> Showing selected article </h1>
 
-<p>
-    Title: <%= @article.title %>
-</p>
+<h2 align="center">Title: <%= @article.title %></h2>
 
-<p>
-    Description <%= @article.description %> 
-</p>
-
-<%= link_to "Edit this article", edit_article_path(@article) %> | 
-<%= link_to "Back to articles listing", articles_path %>
-
+<div class="well col-sm-8 offset-sm-2 show-articles">
+    <h4 class="center description"><strong> Description:</strong></h4>
+    <hr>
+    <%= simple_format(@article.description) %> 
+    <div class="article-actions">
+        <%= link_to "Edit this article", edit_article_path(@article), class:"btn btn-xs btn-primary" %>
+        <%= link_to "Destroy article", article_path(@article), method: :delete, 
+                                        data:{confirm: "Are yousure you want to delete the article?"},
+                                        class:"btn btn-xs btn-danger" %>
+        <%= link_to "view all articles", articles_path, class:"btn btn-xs btn-success" %>
+    </div>
+</div>
