--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,20 +1,24 @@
 <h1>Listing all articles</h1>
-<p>
-    <%= link_to "Create new article", new_article_path%>
-</p>
-<table>
-    <tr>
-        <th>title</th>
-        <th>description</th>
-    </tr>
 
-    <% @articles.each do |article| %>
-        <tr>
-            <td><%= article.title %></td>
-            <td><%= article.description %></td>
-            <td><%= link_to 'Edit', edit_article_path(article) %></td>
-            <td><%= link_to 'Show', article_path(article) %></td>
-            <td><%= link_to 'Delete', article_path(article), method: :delete, data:{confirm:"Are you sure?"} %></td>
-        </tr>
-    <% end %>
-</table>
+<% @articles.each do |article| %>
+    <div class="row">
+        <div class="col-sm-8 offset-sm-2 title-description">
+            <div class="well">
+                <div=class="article-title">
+                    <%= link_to article.title, article_path(article) %>
+                </div>
+                <div class="article-body">
+                    <td><%= truncate(article.description, length:100) %></td>
+                </div>
+                <div class="article-actions">
+                    <%= link_to "Edit this article", edit_article_path(article), class:"btn btn-xs btn-primary" %>
+                    <%= link_to "Destroy article", article_path(article), method: :delete, 
+                                        data:{confirm: "Are yousure you want to delete the article?"},
+                                        class:"btn btn-xs btn-danger" %>
+                    <br>
+                    <h6></h6>                                            
+                </div>
+            </div>
+        </div>
+    </div>
+<% end %>
